JavaImageServlet - updated URL encoding